Update README and remove hover color on colorcards

--- a/src/stylesheets/components/_addcolorform.scss
+++ b/src/stylesheets/components/_addcolorform.scss
@@ -53,7 +53,17 @@ input {
 
     &:focus {
         background: $color-primary-lightest;
+
+        &:invalid {
+            border: 1px solid $color-pink;
+        }
+
+        &:valid {
+            border: 2px solid $color-green;
+        }
     }
+
+
 
 }
 
