--- a/src/stylesheets/components/_checkbox.scss
+++ b/src/stylesheets/components/_checkbox.scss
@@ -22,7 +22,7 @@
     }
 
     &:hover+label:before {
-        background: ($color-primary-light);
+        background: ($color-green);
     }
 
     &:focus+label:before {
