--- a/src/stylesheets/components/_dropdown.scss
+++ b/src/stylesheets/components/_dropdown.scss
@@ -5,7 +5,7 @@
     margin-bottom: 3rem;
     height: 8rem;
     width: 24rem;
-    border-top: 2px dashed $color-green;
+    border-top: 2px dashed $color-secondary;
 
     border-radius: $border-radius;
     background: $color-white;
