--- a/src/stylesheets/modules/_variables.scss
+++ b/src/stylesheets/modules/_variables.scss
@@ -9,30 +9,28 @@ $color-green: lighten(#509e33, 20%);
 
 // Font Colors
 $base-font-color: rgba(250, 250, 253, 0.849);
-$secondary-font-color: #FF6D10;
 
 // Primary and Secondary Colors
-
 $color-primary-dark:#1f2529;
 $color-primary-light: #262d31;
 $color-primary-lightest: #57626b;
-
 $color-secondary: #00bcd4;
-
 $color-secondary-lightest:#84b4eb;
 
 
 // Button Colors
 $button-color-light:#FAFAFA;
+
 // Box Shadows
 $box-shadow-dark: 3px 3px 10px rgba(0, 0, 0, 0.192);
 
+/// ---> Border Styles
 
-//Border-Radius
+//Default Border-Radius
 $border-radius: .2rem;
 
+// Outline Style
 $outline: 3px solid lighten($color-green, 20%);
-
 
 // Breakpoints
 $break-sm: 700px;
