--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,4 @@
 @import 'components/_palette-view.scss';
 @import 'components/_palettecontrols.scss';
 @import 'components/_buttons.scss';
+@import 'components/_alerts.scss'
