--- a/src/sass/modules/_mixins.scss
+++ b/src/sass/modules/_mixins.scss
@@ -26,11 +26,13 @@
     border-radius: 3rem;
     border: none;
     background-color: $color-secondary;
+    border: 2px solid lighten($color-secondary, 3%);
     transition: all .1s ease-in-out;
     box-shadow: $box-shadow-dark;
 
     &:hover {
         background: $color-green;
+        border-color: lighten($color-green, 3%);
         transform: translateY(-.3rem);
         box-shadow: $box-shadow-dark;
     }
