--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 // Color container
@@ -20,7 +21,6 @@
             background: ($color-secondary);
         }
     }
-
 }
 
 
