--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,4 +15,5 @@
 @import 'components/_palette-view.scss';
 @import 'components/_palettecontrols.scss';
 @import 'components/_buttons.scss';
-@import 'components/_alerts.scss'
+@import 'components/_alerts.scss';
+@import 'components/_color-list.scss'
