--- a/src/sass/modules/_animations.scss
+++ b/src/sass/modules/_animations.scss
@@ -53,22 +53,26 @@
 
 @keyframes wave {
     0% {
-        transform: rotate(0deg);
+        transform: rotate(0de);
     }
 
-    10% {
+    30% {
         transform: rotate(0);
     }
 
-    50% {
+    40% {
         transform: rotate(20deg);
     }
 
-    70% {
+    50% {
+        transform: rotate(0deg);
+    }
+
+    60% {
         transform: rotate(-20deg);
     }
 
-    90% {
+    70% {
         transform: rotate(0);
     }
 
