--- a/src/sass/components/_color.scss
+++ b/src/sass/components/_color.scss
@@ -15,7 +15,7 @@
     @include flex-column-center;
 
 
-    @include respond(small) {
+    @include respond(medium) {
         margin-left: 2rem;
         flex-basis: calc(50% - 2em - 4px);
     }
@@ -47,7 +47,7 @@
             color: $color-primary-light;
         }
 
-        @include respond(small) {
+        @include respond(medium) {
             height: 15rem;
         }
     }
