--- a/src/sass/components/_palette-view.scss
+++ b/src/sass/components/_palette-view.scss
@@ -18,7 +18,7 @@
 
     &__heading {
 
-        @include respond(small) {
+        @include respond(medium) {
             font-size: 2rem;
             margin-bottom: 1rem;
         }
