--- a/src/sass/modules/_mixins.scss
+++ b/src/sass/modules/_mixins.scss
@@ -51,7 +51,7 @@
 
 $breakpoint arguement choices:
 - smallest
-- small
+- medium
 
 
 1em = 16px
@@ -65,7 +65,7 @@ $breakpoint arguement choices:
         }
     }
 
-    @if $breakpoint==small {
+    @if $breakpoint==medium {
         @media only screen and (min-width: 48.75em) {
             @content
         }
