Adjust heart alignment

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -75,6 +75,10 @@
 .scroll-button {
     @include flex-column-center;
 
+    &:hover {
+        cursor: pointer;
+    }
+
     &:hover .scroll-button__heading {
         opacity: 1;
     }
