--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -5,7 +5,7 @@
     margin-bottom: 3rem;
     height: 8rem;
     width: 24rem;
-    border-top: 2px dashed $color-secondary;
+    border-top: 2px solid $color-secondary;
     border-bottom: 2px dashed $color-secondary;
 
     border-radius: $border-radius;
@@ -47,8 +47,8 @@
         height: 1rem;
         width: 100%;
         position: absolute;
-        left: 40%;
-        top: 25%;
+        left: 43%;
+        top: 15%;
     }
 
     &__list-item {
