--- a/src/sass/components/_color-list.scss
+++ b/src/sass/components/_color-list.scss
@@ -18,7 +18,6 @@
 
     &__scroll-button-container--top {
         display: flex;
-        position: fixed;
         top: 5rem;
         right: 50%;
         background: transparent !important;
@@ -36,8 +35,11 @@
     }
 
     &__scroll-button-container--bottom {
+        position: absolute;
+        bottom: 3rem;
+        right: 2rem;
+
         @include respond(smallest) {
-            position: absolute;
             bottom: 3rem;
             right: 2rem;
         }
