--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -6,7 +6,7 @@
     height: 8rem;
     width: 24rem;
     border-top: 2px solid $color-secondary;
-    border-bottom: 2px dashed $color-secondary;
+    border-bottom: 2px solid $color-secondary;
 
     border-radius: $border-radius;
     background: $color-white;
