--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -109,3 +109,26 @@
     }
 
 }
+
+/// ---> Remove button styles
+
+.btn-remove,
+.btn-remove:visited,
+.btn-remove:active {
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    text-decoration: none;
+
+    &:hover .cross {
+        fill: $color-red;
+        stroke: $color-red;
+        stroke-width: .5;
+    }
+}
+
+.cross {
+    fill: $color-secondary;
+    transition: all .2s ease;
+    stroke-opacity: 1;
+}
