--- a/src/sass/components/_palette-view.scss
+++ b/src/sass/components/_palette-view.scss
@@ -48,6 +48,11 @@
         display: flex;
         flex-wrap: wrap;
     }
+
+    &__button {
+        align-self: flex-end;
+
+    }
 }
 
 .palette-color {
