--- a/src/css/style.comp.css
+++ b/src/css/style.comp.css
@@ -276,6 +276,10 @@ input {
   ::placeholder:hover {
     color: white; }
 
+.current-color-display {
+  height: 1rem;
+  width: 100%; }
+
 .color-card {
   min-height: 27rem;
   width: 100%;
@@ -385,10 +389,10 @@ input {
   border-top: 2px solid #00bcd4;
   border-bottom: 2px solid #00bcd4;
   border-radius: 0.2rem;
-  background: #FAFAFD;
+  background: #262d31;
   text-transform: uppercase;
   font-size: 1.5rem;
-  color: #1f2529;
+  color: #FAFAFD;
   display: flex;
   flex-direction: column;
   z-index: 10; }
@@ -396,16 +400,17 @@ input {
     position: relative;
     height: 100%;
     width: 100%;
-    background: #FAFAFD;
+    background: #262d31;
     z-index: 10;
     border-top-right-radius: .5rem;
     border-top-left-radius: .5rem; }
   .dd__header-title {
     margin-bottom: 1rem; }
   .dd__list {
+    color: #1f2529;
     position: absolute;
     width: 100%;
-    background: #FAFAFD;
+    background: #57626b;
     z-index: 5;
     animation: drop .5s linear forwards;
     box-shadow: 1px 5px 5px rgba(128, 128, 128, 0.158);
