--- a/src/sass/components/_color-list.scss
+++ b/src/sass/components/_color-list.scss
@@ -7,6 +7,7 @@
     text-align: center;
     width: 95%;
     position: relative;
+    margin-bottom: 7rem;
 
     &>:nth-child(odd) {
         background: darken($color-primary-dark, 2%);
