--- a/src/sass/modules/_animations.scss
+++ b/src/sass/modules/_animations.scss
@@ -81,3 +81,17 @@
     }
 
 }
+
+@keyframes colorChange {
+    0% {
+        color: $color-primary-dark;
+    }
+
+    50% {
+        color: $color-white;
+    }
+
+    100% {
+        color: $color-primary-dark;
+    }
+}
