--- a/src/sass/modules/_animations.scss
+++ b/src/sass/modules/_animations.scss
@@ -91,6 +91,10 @@
         color: $color-white;
     }
 
+    60% {
+        color: $color-white;
+    }
+
     100% {
         color: $color-primary-dark;
     }
